@@ -1,14 +1,9 @@
 package slt.connectivity.strava;
 
-import lombok.extern.slf4j.Slf4j;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.runner.RunWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
-import org.mockito.junit.MockitoJUnitRunner;
 import slt.config.StravaConfig;
 import slt.connectivity.strava.dto.*;
 import slt.database.ActivityRepository;
@@ -16,60 +11,51 @@ import slt.database.SettingsRepository;
 import slt.database.entities.Activity;
 import slt.database.entities.Setting;
 import slt.connectivity.strava.dto.StravaSyncedAccountDto;
+import slt.exceptions.ConnectivityException;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.*;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
-@Slf4j
-@RunWith(MockitoJUnitRunner.class)
 class StravaActivityControllerTest {
 
-    @Mock
-    SettingsRepository settingsRepository;
+    private SettingsRepository settingsRepository;
+    private ActivityRepository activityRepository;
+    private StravaConfig stravaConfig;
+    private StravaClient stravaClient;
 
-    @Mock
-    ActivityRepository activityRepository;
-
-    @Mock
-    StravaConfig stravaConfig;
-
-    @Mock
-    StravaClient stravaClient;
-
-    @InjectMocks
-    StravaActivityService stravaActivityService;
+    private StravaActivityService stravaActivityService;
 
     @BeforeEach
-    public void initMocks() {
-        MockitoAnnotations.initMocks(this);
+    public void setup() {
+        settingsRepository = mock(SettingsRepository.class);
+        activityRepository = mock(ActivityRepository.class);
+        stravaConfig = mock(StravaConfig.class);
+        stravaClient = mock(StravaClient.class);
+        stravaActivityService = new StravaActivityService(settingsRepository, activityRepository, stravaConfig, stravaClient);
     }
 
     @Test
     void isStravaConnectedTrue() {
-
-        when(settingsRepository.getLatestSetting(eq(1L), eq("STRAVA_ATHLETE_ID"))).thenReturn(Setting.builder().value("dad").build());
+        when(settingsRepository.getLatestSetting(eq(1L), eq("STRAVA_ATHLETE_ID"))).thenReturn(Optional.ofNullable(Setting.builder().value("dad").build()));
         final boolean stravaConnected = stravaActivityService.isStravaConnected(1L);
-        assertThat(stravaConnected).isEqualTo(true);
+        Assertions.assertTrue(stravaConnected);
     }
 
     @Test
     void isStravaConnectedFalse() {
-
-        when(settingsRepository.getLatestSetting(eq(1L), eq("STRAVA_ATHLETE_ID"))).thenReturn(null);
+        when(settingsRepository.getLatestSetting(eq(1L), eq("STRAVA_ATHLETE_ID"))).thenReturn(Optional.empty());
         final boolean stravaConnected = stravaActivityService.isStravaConnected(1L);
-        assertThat(stravaConnected).isEqualTo(false);
+        Assertions.assertFalse(stravaConnected);
     }
 
     @Test
     void getStravaConnectivityWhenConnected() {
-
         mockSetting(1L, "STRAVA_ATHLETE_ID", "101");
         mockSetting(1L, "STRAVA_FIRSTNAME", "B");
         mockSetting(1L, "STRAVA_LASTNAME", "C");
@@ -77,39 +63,29 @@ class StravaActivityControllerTest {
 
         when(activityRepository.countByUserIdAndSyncedWith(eq(1L), eq("STRAVA"))).thenReturn(1L);
 
-        final StravaSyncedAccountDto stravaConnectivity = stravaActivityService.getStravaConnectivity(1L);
-        assertThat(stravaConnectivity.getSyncedAccountId()).isEqualTo(101);
-        assertThat(stravaConnectivity.getName()).isEqualTo("B C");
-        assertThat(stravaConnectivity.getImage()).isEqualTo("D");
-        assertThat(stravaConnectivity.getNumberActivitiesSynced()).isEqualTo(1L);
-        assertThat(stravaConnectivity.getSyncedApplicationId()).isNull();
+        final var stravaConnectivity = stravaActivityService.getStravaConnectivity(1L);
+        Assertions.assertEquals(101, stravaConnectivity.getSyncedAccountId());
+        Assertions.assertEquals("B C", stravaConnectivity.getName());
+        Assertions.assertEquals("D", stravaConnectivity.getImage());
+        Assertions.assertEquals(1L, stravaConnectivity.getNumberActivitiesSynced());
+        Assertions.assertNull(stravaConnectivity.getSyncedApplicationId());
     }
 
     @Test
     void getStravaConnectivityNotConnected() {
-
         mockSetting(1L, "STRAVA_ATHLETE_ID", null);
 
         when(activityRepository.countByUserIdAndSyncedWith(eq(1L), eq("STRAVA"))).thenReturn(1L);
         when(stravaConfig.getClientId()).thenReturn(201);
 
         final StravaSyncedAccountDto stravaConnectivity = stravaActivityService.getStravaConnectivity(1L);
-        assertThat(stravaConnectivity.getSyncedAccountId()).isNull();
-        assertThat(stravaConnectivity.getName()).isNull();
-        assertThat(stravaConnectivity.getImage()).isNull();
-        assertThat(stravaConnectivity.getNumberActivitiesSynced()).isNull();
-        assertThat(stravaConnectivity.getSyncedApplicationId()).isEqualTo(201);
+        Assertions.assertNull(stravaConnectivity.getSyncedAccountId());
+        Assertions.assertNull(stravaConnectivity.getName());
+        Assertions.assertNull(stravaConnectivity.getImage());
+        Assertions.assertNull(stravaConnectivity.getNumberActivitiesSynced());
+        Assertions.assertEquals(201, stravaConnectivity.getSyncedApplicationId());
     }
 
-
-    private void mockSetting(final Long userId, final String name, final String value) {
-        if (value == null) {
-            when(settingsRepository.getLatestSetting(eq(userId), eq(name))).thenReturn(null);
-
-        } else {
-            when(settingsRepository.getLatestSetting(eq(userId), eq(name))).thenReturn(Setting.builder().value(value).build());
-        }
-    }
 
     @Test
     void registerStravaConnectivityTokenOK() {
@@ -123,13 +99,14 @@ class StravaActivityControllerTest {
                 .expires_in(2L)
                 .athlete(StravaAthleteDto.builder().firstname("jan").lastname("patat").profile("profile").id(20L).build())
                 .build();
-        when(stravaClient.getStravaToken(eq("appelflap"))).thenReturn(stravaToken);
+        when(stravaClient.getStravaToken(eq("appelflap"))).thenReturn(Optional.ofNullable(stravaToken));
         when(activityRepository.countByUserIdAndSyncedWith(eq(1L), eq("STRAVA"))).thenReturn(1L);
 
-        final StravaSyncedAccountDto stravaSyncedAccountDto = stravaActivityService.registerStravaConnectivity(1L, "appelflap");
-        assertThat(stravaSyncedAccountDto.getNumberActivitiesSynced()).isEqualTo(1L);
-        assertThat(stravaSyncedAccountDto.getSyncedAccountId()).isEqualTo(20L);
-        assertThat(stravaSyncedAccountDto.getName()).isEqualTo("jan patat");
+        final StravaSyncedAccountDto stravaSyncedAccountDto = stravaActivityService.registerStravaConnectivity(
+                1L, "appelflap");
+        Assertions.assertEquals(1L, stravaSyncedAccountDto.getNumberActivitiesSynced());
+        Assertions.assertEquals(20L, stravaSyncedAccountDto.getSyncedAccountId());
+        Assertions.assertEquals("jan patat", stravaSyncedAccountDto.getName());
     }
 
 
@@ -138,17 +115,14 @@ class StravaActivityControllerTest {
         settingsRepository.putSetting(any(Setting.class));
 
         Mockito.times(8);
-        when(stravaClient.getStravaToken(eq("appelflap"))).thenReturn(null);
+        when(stravaClient.getStravaToken(eq("appelflap"))).thenReturn(Optional.empty());
         when(activityRepository.countByUserIdAndSyncedWith(eq(1L), eq("STRAVA"))).thenReturn(1L);
 
-        final StravaSyncedAccountDto stravaSyncedAccountDto = stravaActivityService.registerStravaConnectivity(1L, "appelflap");
-        assertThat(stravaSyncedAccountDto).isNull();
-
+        Assertions.assertThrows(ConnectivityException.class, () -> stravaActivityService.registerStravaConnectivity(1L, "appelflap"));
     }
 
     @Test
     void unregisterStravaOK() {
-
         mockSetting(1L, "STRAVA_ATHLETE_ID", "12");
         mockSetting(1L, "STRAVA_ACCESS_TOKEN", "A");
         mockSetting(1L, "STRAVA_REFRESH_TOKEN", "B");
@@ -158,9 +132,7 @@ class StravaActivityControllerTest {
         when(stravaClient.unregister(any(StravaToken.class))).thenReturn(true);
         settingsRepository.deleteAllForUser(eq(1L), any(String.class));
         times(8);
-
         stravaActivityService.unregisterStrava(1L);
-
         verify(settingsRepository, times(8)).deleteAllForUser(eq(1L), any(String.class));
     }
 
@@ -168,25 +140,20 @@ class StravaActivityControllerTest {
     void unregisterStravaNietOK() {
         // Voor ingelogd zijn:
         mockSetting(1L, "STRAVA_ATHLETE_ID", null);
-
         stravaActivityService.unregisterStrava(1L);
-
         verify(settingsRepository).getLatestSetting(eq(1L), any(String.class));
         verifyNoMoreInteractions(settingsRepository);
-
     }
 
     @Test
     void getStravaActivitiesForDay() {
         when(stravaClient.getActivitiesForDay(eq("a"), any(LocalDate.class))).thenReturn(new ArrayList<>());
-
-        final List<ListedActivityDto> results = stravaActivityService.getStravaActivitiesForDay(StravaToken.builder().access_token("a").build(), LocalDate.now());
-        assertThat(results.isEmpty()).isTrue();
+        final var results = stravaActivityService.getStravaActivitiesForDay(StravaToken.builder().access_token("a").build(), LocalDate.now());
+        Assertions.assertTrue(results.isEmpty());
     }
 
     @Test
     void testExtraStravaActivitiesStravaConnectedNoForceNoStravaResults() {
-
         // Voor ingelogd zijn:
         mockSetting(1L, "STRAVA_ATHLETE_ID", "A");
 
@@ -199,17 +166,15 @@ class StravaActivityControllerTest {
 
         when(stravaClient.getActivitiesForDay(eq("a"), any(LocalDate.class))).thenReturn(List.of());
 
-
-        List<Activity> storedMacroLogActivities = Collections.singletonList(Activity.builder().build());
-        final List<Activity> responseActivities = stravaActivityService.getExtraStravaActivities(
+        final var storedMacroLogActivities = List.of(Activity.builder().build());
+        final var responseActivities = stravaActivityService.getExtraStravaActivities(
                 storedMacroLogActivities, 1L, LocalDate.parse("2001-01-01"), false);
 
-        assertThat(responseActivities).hasSize(0);
+        Assertions.assertEquals(0, responseActivities.size());
     }
 
     @Test
     void testExtraStravaActivitiesStravaConnectedNoForceWithStravaResults() {
-
         // Voor ingelogd zijn:
         mockSetting(1L, "STRAVA_ATHLETE_ID", "A");
 
@@ -221,15 +186,14 @@ class StravaActivityControllerTest {
         mockSetting(1L, "STRAVA_EXPIRES_AT", "" + toEpochSecond);
 
 
-        List<Activity> storedMacroLogActivities = Collections.singletonList(Activity.builder().build());
-        final List<Activity> responseActivities = stravaActivityService.getExtraStravaActivities(storedMacroLogActivities, 1L, LocalDate.parse("2001-01-01"), false);
+        final var storedMacroLogActivities = List.of(Activity.builder().build());
+        final var responseActivities = stravaActivityService.getExtraStravaActivities(storedMacroLogActivities, 1L, LocalDate.parse("2001-01-01"), false);
 
-        assertThat(responseActivities).hasSize(0);
+        Assertions.assertEquals(0, responseActivities.size());
     }
 
     @Test
     void testExtraStravaActivitiesStravaConnectedNoForceWithStravaResultsAlreadyKnown() {
-
         // Voor ingelogd zijn:
         mockSetting(1L, "STRAVA_ATHLETE_ID", "A");
 
@@ -240,24 +204,22 @@ class StravaActivityControllerTest {
         final long toEpochSecond = LocalDateTime.now().plusDays(1).toEpochSecond(ZoneOffset.UTC);
         mockSetting(1L, "STRAVA_EXPIRES_AT", "" + toEpochSecond);
 
-        when(stravaClient.getActivitiesForDay(eq("A"), any(LocalDate.class))).thenReturn(Collections.singletonList(
+        when(stravaClient.getActivitiesForDay(eq("A"), any(LocalDate.class))).thenReturn(List.of(
                 ListedActivityDto.builder().id(1L).build()
         ));
 
         when(stravaClient.getActivityDetail(eq("A"), eq(1L))).thenReturn(
-                ActivityDetailsDto.builder().id(1L).build());
+                Optional.ofNullable(ActivityDetailsDto.builder().id(1L).build()));
 
-
-        List<Activity> storedMacroLogActivities = Collections.singletonList(
+        final var storedMacroLogActivities = List.of(
                 Activity.builder().syncedId(1L).build());
-        final List<Activity> responseActivities = stravaActivityService.getExtraStravaActivities(storedMacroLogActivities, 1L, LocalDate.parse("2001-01-01"), false);
+        final var responseActivities = stravaActivityService.getExtraStravaActivities(storedMacroLogActivities, 1L, LocalDate.parse("2001-01-01"), false);
 
-        assertThat(responseActivities).hasSize(0);
+        Assertions.assertEquals(0, responseActivities.size());
     }
 
     @Test
     void testExtraStravaActivitiesStravaConnectedWithForceWithStravaResultsAlreadyKnownDeleted() {
-
         // Voor ingelogd zijn:
         mockSetting(1L, "STRAVA_ATHLETE_ID", "A");
 
@@ -268,33 +230,33 @@ class StravaActivityControllerTest {
         final long toEpochSecond = LocalDateTime.now().plusDays(1).toEpochSecond(ZoneOffset.UTC);
         mockSetting(1L, "STRAVA_EXPIRES_AT", "" + toEpochSecond);
 
-        when(stravaClient.getActivitiesForDay(eq("A"), any(LocalDate.class))).thenReturn(Collections.singletonList(
+        when(stravaClient.getActivitiesForDay(eq("A"), any(LocalDate.class))).thenReturn(List.of(
                 ListedActivityDto.builder().id(1L).build()
         ));
 
         when(stravaClient.getActivityDetail(eq("A"), eq(1L))).thenReturn(
-                ActivityDetailsDto.builder().id(1L).build());
+                Optional.ofNullable(ActivityDetailsDto.builder().id(1L).build()));
 
-        List<Activity> storedMacroLogActivities = Collections.singletonList(
+        final var storedMacroLogActivities = List.of(
                 Activity.builder().syncedId(1L).status("DELETED").build());
-        final List<Activity> responseActivities = stravaActivityService.getExtraStravaActivities(storedMacroLogActivities, 1L, LocalDate.parse("2001-01-01"), true);
+        final var responseActivities = stravaActivityService.getExtraStravaActivities(
+                storedMacroLogActivities, 1L, LocalDate.parse("2001-01-01"), true);
 
         when(activityRepository.saveActivity(any(Activity.class))).thenReturn(Activity.builder().build());
 
         // dirty aanpassing van de parameter lijst naar niet meer gedelete
-        assertThat(storedMacroLogActivities.getFirst().getStatus()).isNull();
+        Assertions.assertNull(storedMacroLogActivities.getFirst().getStatus());
 
         verify(activityRepository, times(1)).saveActivity(any());
         verify(stravaClient, times(1)).getActivitiesForDay(any(), any());
         verify(stravaClient, times(1)).getActivityDetail(any(), any());
 
         // already in result, not in extra results
-        assertThat(responseActivities).hasSize(0);
+        Assertions.assertEquals(0, responseActivities.size());
     }
 
     @Test
     void testExtraStravaActivitiesStravaConnectedWithNoForceButWebhookEnabledWithStravaResultsAlreadyKnownDeleted() {
-
         // Voor ingelogd zijn:
         mockSetting(1L, "STRAVA_ATHLETE_ID", "A");
 
@@ -305,31 +267,31 @@ class StravaActivityControllerTest {
         final long toEpochSecond = LocalDateTime.now().plusDays(1).toEpochSecond(ZoneOffset.UTC);
         mockSetting(1L, "STRAVA_EXPIRES_AT", "" + toEpochSecond);
 
-        when(stravaClient.getActivitiesForDay(eq("A"), any(LocalDate.class))).thenReturn(Collections.singletonList(
+        when(stravaClient.getActivitiesForDay(eq("A"), any(LocalDate.class))).thenReturn(List.of(
                 ListedActivityDto.builder().id(1L).build()
         ));
 
         when(stravaClient.getActivityDetail(eq("A"), eq(1L))).thenReturn(
-                ActivityDetailsDto.builder().id(1L).build());
+                Optional.ofNullable(ActivityDetailsDto.builder().id(1L).build()));
 
         stravaActivityService.stravaWebhookSubscriptionId = 12;
 
-        List<Activity> storedMacroLogActivities = Collections.singletonList(
+        final var storedMacroLogActivities = List.of(
                 Activity.builder().syncedId(1L).status("DELETED").build());
-        final List<Activity> responseActivities = stravaActivityService.getExtraStravaActivities(storedMacroLogActivities, 1L, LocalDate.parse("2001-01-01"), false);
-
+        final var responseActivities = stravaActivityService.getExtraStravaActivities(
+                storedMacroLogActivities, 1L, LocalDate.parse("2001-01-01"), false);
         when(activityRepository.saveActivity(any(Activity.class))).thenReturn(Activity.builder().build());
 
         // De status is niet aangepast. Geen force geweest namelijk
-        assertThat(storedMacroLogActivities.getFirst().getStatus()).isEqualTo("DELETED");
+        Assertions.assertEquals("DELETED", storedMacroLogActivities.getFirst().getStatus());
 
-        // Geen conenctie naar strava, want de webhook staat aan. Alleen by force controleren we strava
+        // Geen connectie naar strava, want de webhook staat aan. Alleen by force controleren we strava
         verify(activityRepository, times(0)).saveActivity(any());
         verify(stravaClient, times(0)).getActivitiesForDay(any(), any());
         verify(stravaClient, times(0)).getActivityDetail(any(), any());
 
         // already in result, not in extra results
-        assertThat(responseActivities).hasSize(0);
+        Assertions.assertEquals(0, responseActivities.size());
     }
 
     @Test
@@ -344,7 +306,7 @@ class StravaActivityControllerTest {
         final long toEpochSecond = LocalDateTime.now().minusDays(1).toEpochSecond(ZoneOffset.UTC);
         mockSetting(1L, "STRAVA_EXPIRES_AT", "" + toEpochSecond);
 
-        when(stravaClient.refreshToken(eq("B"))).thenReturn(StravaToken.builder().expires_at(LocalDateTime.now().plusDays(1).toEpochSecond(ZoneOffset.UTC)).build());
+        when(stravaClient.refreshToken(eq("B"))).thenReturn(Optional.ofNullable(StravaToken.builder().expires_at(LocalDateTime.now().plusDays(1).toEpochSecond(ZoneOffset.UTC)).build()));
 
         stravaActivityService.unregisterStrava(1L);
 
@@ -368,7 +330,7 @@ class StravaActivityControllerTest {
         when(stravaConfig.getClientId()).thenReturn(2);
         when(stravaConfig.getClientSecret()).thenReturn("a");
         when(stravaConfig.getVerifytoken()).thenReturn("iets");
-        when(stravaClient.viewWebhookSubscription(any(), any())).thenReturn(SubscriptionInformation.builder().build());
+        when(stravaClient.viewWebhookSubscription(any(), any())).thenReturn(Optional.ofNullable(SubscriptionInformation.builder().build()));
 
         new StravaActivityService(settingsRepository, activityRepository, stravaConfig, stravaClient);
 
@@ -384,9 +346,10 @@ class StravaActivityControllerTest {
         when(stravaConfig.getClientId()).thenReturn(2);
         when(stravaConfig.getClientSecret()).thenReturn("a");
         when(stravaConfig.getVerifytoken()).thenReturn("iets");
-        when(stravaClient.viewWebhookSubscription(any(), any())).thenReturn(null);
+        when(stravaClient.viewWebhookSubscription(any(), any())).thenReturn(Optional.empty());
 
-        new StravaActivityService(settingsRepository, activityRepository, stravaConfig, stravaClient);
+        Assertions.assertThrows(ConnectivityException.class, () ->
+                new StravaActivityService(settingsRepository, activityRepository, stravaConfig, stravaClient));
 
         verify(stravaConfig, times(3)).getVerifytoken();
         verify(stravaConfig, times(1)).getClientId();
@@ -480,7 +443,7 @@ class StravaActivityControllerTest {
         mockSetting(123L, "STRAVA_EXPIRES_AT", "" + toEpochSecond);
 
         when(activityRepository.findByUserIdAndSyncIdAndSyncedWith(eq(123L), eq("STRAVA"), any())).thenReturn(Optional.of(Activity.builder().build()));
-        when(stravaClient.getActivityDetail(any(), eq(3L))).thenReturn(ActivityDetailsDto.builder().build());
+        when(stravaClient.getActivityDetail(any(), eq(3L))).thenReturn(Optional.ofNullable(ActivityDetailsDto.builder().build()));
 
         stravaActivityService.receiveWebhookEvent(WebhookEvent.builder().subscription_id(1).owner_id(20L).object_id(3L).object_type("activity").aspect_type("create").build());
 
@@ -508,7 +471,7 @@ class StravaActivityControllerTest {
         mockSetting(123L, "STRAVA_EXPIRES_AT", "" + toEpochSecond);
 
         when(activityRepository.findByUserIdAndSyncIdAndSyncedWith(eq(123L), eq("STRAVA"), any())).thenReturn(Optional.empty());
-        when(stravaClient.getActivityDetail(any(), eq(3L))).thenReturn(ActivityDetailsDto.builder().start_date("2018-02-16T14:52:54Z").build());
+        when(stravaClient.getActivityDetail(any(), eq(3L))).thenReturn(Optional.ofNullable(ActivityDetailsDto.builder().start_date("2018-02-16T14:52:54Z").build()));
 
         stravaActivityService.receiveWebhookEvent(WebhookEvent.builder().subscription_id(1).owner_id(20L).object_id(3L).object_type("activity").aspect_type("update").build());
 
@@ -546,6 +509,14 @@ class StravaActivityControllerTest {
         verify(activityRepository).deleteActivity(eq(123L), eq(300L));
 
         verifyNoMoreInteractions(stravaClient, settingsRepository, activityRepository, stravaConfig);
+    }
+
+    private void mockSetting(final Long userId, final String name, final String value) {
+        if (value == null) {
+            when(settingsRepository.getLatestSetting(eq(userId), eq(name))).thenReturn(Optional.empty());
+        } else {
+            when(settingsRepository.getLatestSetting(eq(userId), eq(name))).thenReturn(Optional.ofNullable(Setting.builder().value(value).build()));
+        }
     }
 
 }
